# data-augmentation-for-manipulation

./: .gitignore  README.md
analysis/: CMakeLists.txt  cl_trials  classifier_data  hparams  package.xml  robot_points_data  setup.py
analysis/analysis_params/: common.json
analysis/figures_configs/: ift.hjson
analysis/notebooks/: car_to_long_hook.ipynb
analysis/scripts/: analyze_graph_planning.py  analyze_ift_results.py  analyze_planning_results.py  analyze_random_actions_baseline.py  analyze_random_actions_baseline_v0.py  analyze_random_actions_baseline_v1.py  analyze_real_val_ift_results.py  analyze_transfer_planning_metrics.py  aug_classifier_metrics.py  classifier_eval_analysis.py  copy_ift_config_to_classifier_params.py  cylinders_figures.py  dynamics_error_boxplot.py  eval_augmentation.py  eval_ift_classifier_metrics.py  eval_offline_augmentation.py  eval_online_augmentation.py  find_planning_result.py  find_result_folder.py  find_similar_examples.py  fine_tuning_hist.py  full_fine_tuning_check.py  ift_classifier_metrics.py  ift_classifier_proxy_metrics.py  make_eval_video.py  make_learning_progress_video.py  modify_classifier_db.py  print_results_stats.py  propnet_aug_plots.py  real_robot_results_plots.py  scratch.py  test_augmentation_significance.py  test_drop_vs_original.py  update_planning_metrics.py  update_results_database.py
analysis/tables_configs/: factors.hjson  planning_evaluation.hjson  proxy_eval.hjson  transfer.hjson
arm_moveit/: CMakeLists.txt  package.xml  setup.py
arm_moveit/scripts/: generate_robot_pointcloud.py  test_robot_pointcloud_perf.py  victor_gripper_points_and_sdf.py  vizualize_robot_pointcloud.py
arm_moveit/src/: bindings.cpp  motion_planning_tutorial.cpp  robot_points_generator.cpp  robot_points_generator_node.cpp
cylinders_simple_demo/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
cylinders_simple_demo/aug_hparams/: cylinders.hjson
cylinders_simple_demo/hparams/: propnet.hjson
cylinders_simple_demo/scripts/: generate_augmented_dataset.py  train_test_dynamics.py  visualize_dataset.py
learn_invariance/: CMakeLists.txt  collect_dynamics_params  fwd_model_data  package.xml  setup.py
learn_invariance/hparams/: invariance_mlp.hjson
learn_invariance/scripts/: generate_invariance_dataset.py  test_dataset_perf.py  train_test_invariance.py  visualize_invariance_dataset.py
link_bot_data/: .gitignore  cl_trials  cylinders_test_data.hjson  mde_datasets  package.xml  recovery_data  recovery_trials
link_bot_data/collect_dynamics_params/: blocks.hjson  car.hjson  cylinders.hjson  debugging.hjson  debugging_cylinders.hjson  dragging.hjson  floating_no_obs.hjson  floating_rope.hjson  real_val.hjson  toy.hjson  two_cylinders.hjson  val_car.hjson  val_car3.hjson  val_car4.hjson  val_car4_alt.hjson  val_car_alt.hjson  val_car_alt2.hjson  val_car_alt3.hjson  val_car_alt_100.hjson  val_car_tinv.hjson  val_deadend.hjson  val_floating_boxes.hjson  val_long_hook.hjson  val_party.hjson  val_poles.hjson  val_rack.hjson  val_ring.hjson  val_slit.hjson  victor_obs.hjson
link_bot_data/launch/: visualize_dynamics_data.launch
link_bot_data/notebooks/: barrier functions.ipynb
link_bot_data/scripts/: add_paths_to_dataset.py  add_sdf_and_grad.py  collect_dynamics_data.py  convert_tfrecords_to_pkl.py  copy_df_to_db.py  cylinders.py  debug_pklgz.py  debug_tfrecord.py  filter_classifier_dataset.py  get_env_and_viz.py  inspect_weights.py  make_classifier_dataset.py  make_recovery_dataset.py  merge_dynamics_datasets_pkl.py  merge_pkls.py  merge_tfrecords.py  modify_classifier_dataset.py  modify_dataset.py  modify_dynamics_dataset.py  modify_recovery_dataset.py  multi_collect_dynamics_data.py  pad_voxel_grid_env.py  split_dataset.py  split_dataset2.py  uncompress_dataset.py  visualize_cylinders.py  visualize_dynamics_dataset.py  visualize_sdf.py  viz_env.py
link_bot_gazebo/: CMakeLists.txt  custom_rosconsole.conf  package.xml  planner_configs
link_bot_gazebo/launch/: floating_rope.launch  main.launch  robot_in_gazebo.launch  val.launch  victor.launch
link_bot_gazebo/scripts/: check_gripper_rotation.py  filter_scenes.py  relaunch_gazebo.py  restore_gazebo.py  resume_gazebo.py  suspend_pause_gazebo.py  test_move_rope.py  test_occupancy_service.py  test_val_rope.py  val_grasp_rope.py
link_bot_gazebo/src/: base_link_position_controller.cpp  collision_map_plugin.cpp  collision_map_plugin.h  gazebo_plugin_utils.cpp  gazebo_ros_tf_plugin.cpp  gazebo_ros_tf_plugin.h  link_position_3d_kinematic_controller.cpp  link_position_3d_pid_controller.cpp  position_3d_plugin.cpp  position_3d_plugin.h  rope_plugin.cpp  rope_plugin.h  stepping_plugin.cpp
link_bot_gazebo/worlds/: alt_rope.world  car.world  car3.world  car4.world  car4_alt.world  car5_alt.world  deadend.world  dragging_no_obs.world  dragging_obs.world  dual_floating_grippers.world  empty.world  empty_val.world  floating_boxes.world  hooks_rack.world  long_hook.world  no_car_alt.world  party.world  party2.world  poles.world  rack.world  real_car.world  real_val_rope.world  ring.world  rope.world  rope_cylinder.world  slit.world  tabletop_obstacles.world  tabletop_rope.world  tabletop_rope_obstacles.world  trash.world
link_bot_perception/: .gitignore  CMakeLists.txt  custom_rosconsole.conf  gripper_info.yaml  package.xml  setup.py
link_bot_perception/launch/: rope_tracking.launch  tracking_tripodA.launch
link_bot_perception/scripts/: add_tracking_to_dataset.py  calibrate_camera_to_mocap.py  calibrate_kinect_to_mocap.py  calibrate_mocap_and_fk.py  colmap_calibrate.py  make_calib_board.py  record_camera_and_tf.py  (+1 more)
link_bot_planning/: .gitignore  2021-08-07-22-56-01.bag  CMakeLists.txt  README.md  gp_mde_configs  hparams  invariance_data  invariance_trials  package.xml  pretransfer_initial_configs  robot_points_data
link_bot_pycommon/: CMakeLists.txt  package.xml
mde/: .gitignore  CMakeLists.txt  artifacts  package.xml  setup.py
merp/: .gitignore  CMakeLists.txt  package.xml  setup.py
tensorflow_kinematics/: .gitignore  CMakeLists.txt  package.xml  readme.md  setup.py
(+2712 files in other folders)
