<?xml version="1.0"?>
<package format="2">
  <name>learn_invariance</name>
  <version>0.0.0</version>
  <description>The learn_invariance package</description>
  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>link_bot_data</depend>
  <depend>link_bot_gazebo</depend>
  <depend>link_bot_pycommon</depend>

</package>
