<?xml version="1.0"?>
<package format="2">
  <name>link_bot_data</name>
  <version>0.0.0</version>
  <description>data collection</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>

  <license>BSD</license>

  <author >Peter Mitrano</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>jsk_recognition_msgs</depend>

</package>
