<package format="2">
  <name>link_bot_gazebo</name>
  <version>0.0.0</version>
  <description>link bot gazebo</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>arc_utilities</depend>
  <depend>arm_video_recorder</depend>
  <depend>cnpy</depend>
  <depend>control_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>peter_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sdf_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>victor_hardware_interface</depend>
  <depend>visualization_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>link_bot_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros_link_attacher</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/Media" />
    <gazebo_ros gazebo_model_path="${prefix}/Media/models" />
  </export>
</package>
