<?xml version="1.0"?>
<package format="2">
  <name>link_bot_perception</name>
  <version>0.0.0</version>
  <description>The link_bot_perception package</description>

  <maintainer email="peter@todo.todo">peter</maintainer>

  <license>TODO</license>

  <author >peter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cdcpd</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>link_bot_data</depend>
  <depend>message_filters</depend>
  <depend>moveit_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

</package>
