<?xml version="1.0"?>
<package format="2">
    <name>link_bot_planning</name>
    <version>0.0.0</version>
    <description>planning, mostly wrapping OMPL</description>

    <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


    <license>BSD</license>

    <author>Peter Mitrano</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>link_bot_classifiers</depend>
    <depend>link_bot_data</depend>
    <depend>link_bot_gazebo</depend>
    <depend>link_bot_gazebo_python</depend>
    <depend>link_bot_pycommon</depend>
    <depend>merrt_visualization</depend>
    <depend>moonshine</depend>
    <depend>ompl</depend>
    <depend>peter_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>pybind11_catkin</depend>
    <depend>rospy</depend>

</package>
