<?xml version="1.0"?>
<package format="2">
  <name>link_bot_pycommon</name>
  <version>0.0.0</version>
  <description>jupyter pycommon</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: properly list dependencies -->
  <depend>arm_gazebo_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>pybind11_catkin</depend>
  <depend>ros_numpy</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>
  <depend>std_msgs</depend>
  <depend>tf2_sensors_msgs</depend>

</package>
